k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-app-deployment
  labels:
    app: express-app
spec:
  replicas: 2 # Specify the desired number of pods
  selector:
    matchLabels:
      app: express-app
  template:
    metadata:
      labels:
        app: express-app
    spec:
      containers:
        - name: express-app-container
          image: public.ecr.aws/b7x8p9h1/cloudnativetutorial:latest # Replace with your Docker image
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
