k8s/service-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: service-clusterip
spec:
  selector:
    app.kubernetes.io/name: express-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3000
