k8s/service-externalname.yml
apiVersion: v1
kind: Service
metadata:
  name: service-apache
spec:
  type: ExternalName
  externalName: ec2-46-51-142-231.eu-west-1.compute.amazonaws.com
