k8s/service-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: service-loadbalancer
spec:
  selector:
    app: express-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3000
  clusterIP: 172.31.37.84
  type: LoadBalancer
