k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: public
  rules:
  - http:
      paths:
      - path: /express
        pathType: Prefix
        backend:
          service:
            name: express-app-deployment
            port:
              number: 8080
