k8s/netpol-fire.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol-fire
  namespace: fire
spec:
  podSelector:
    matchLabels:
      app: fire-nginx
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: wind
    ports:
    - protocol: TCP
      port: 80
